docs-archive/apache-airflow-providers-amazon/9.40.0/_sources/_api/airflow/providers/amazon/aws/triggers/eks/index.rst.txt
airflow.providers.amazon.aws.triggers.eks
=========================================

.. py:module:: airflow.providers.amazon.aws.triggers.eks


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.triggers.eks.EksCreateClusterTrigger
   airflow.providers.amazon.aws.triggers.eks.EksPodTrigger
   airflow.providers.amazon.aws.triggers.eks.EksDeleteClusterTrigger
   airflow.providers.amazon.aws.triggers.eks.EksCreateFargateProfileTrigger
   airflow.providers.amazon.aws.triggers.eks.EksDeleteFargateProfileTrigger
   airflow.providers.amazon.aws.triggers.eks.EksCreateNodegroupTrigger
   airflow.providers.amazon.aws.triggers.eks.EksDeleteNodegroupTrigger


Module Contents
---------------

.. py:class:: EksCreateClusterTrigger(cluster_name, waiter_delay, waiter_max_attempts, aws_conn_id, region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger for EksCreateClusterOperator.

   The trigger will asynchronously wait for the cluster to be created.

   :param cluster_name: The name of the EKS cluster
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: Which AWS region the connection should use.
        If this is None or empty then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



.. py:class:: EksPodTrigger(*, eks_cluster_name, aws_conn_id = None, region = None, pod_name, pod_namespace, trigger_start_time, base_container_name, kubernetes_conn_id = None, connection_extras = None, poll_interval = 2, cluster_context = None, config_dict = None, in_cluster = None, get_logs = True, startup_timeout = 120, startup_check_interval = 5, schedule_timeout = 120, on_finish_action = 'delete_pod', on_kill_action = 'delete_pod', termination_grace_period = None, last_log_time = None, logging_interval = None, trigger_kwargs = None)

   Bases: :py:obj:`airflow.providers.cncf.kubernetes.triggers.pod.KubernetesPodTrigger`


   KubernetesPodTrigger for EKS that generates fresh kubeconfig with new credentials.

   When ``EksPodOperator`` defers, the kubeconfig stored in ``config_dict`` contains
   an exec command that references a temporary credentials file. That file is cleaned
   up when the operator's context managers exit (on deferral). By the time the trigger
   runs — whether in a real triggerer process or inline via ``dag.test()`` — the file
   is gone.

   This trigger solves the problem by regenerating the kubeconfig with fresh AWS
   credentials before executing. The temporary files are kept alive for the entire
   duration of the trigger's ``run()`` method.

   :param eks_cluster_name: The name of the Amazon EKS Cluster.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region: Which AWS region the connection should use.


   .. py:attribute:: eks_cluster_name


   .. py:attribute:: region
      :value: None



   .. py:method:: serialize()

      Serialize EksPodTrigger arguments and classpath.



   .. py:method:: run()
      :async:


      Generate fresh kubeconfig, then delegate to the parent trigger.



.. py:class:: EksDeleteClusterTrigger(cluster_name, waiter_delay, waiter_max_attempts, aws_conn_id, region_name, force_delete_compute, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger for EksDeleteClusterOperator.

   The trigger will asynchronously wait for the cluster to be deleted. If there are
   any nodegroups or fargate profiles associated with the cluster, they will be deleted
   before the cluster is deleted.

   :param cluster_name: The name of the EKS cluster
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: Which AWS region the connection should use.
        If this is None or empty then the default boto3 behaviour is used.
   :param force_delete_compute: If True, any nodegroups or fargate profiles associated
       with the cluster will be deleted before the cluster is deleted.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


   .. py:attribute:: cluster_name


   .. py:attribute:: waiter_delay


   .. py:attribute:: waiter_max_attempts


   .. py:attribute:: aws_conn_id


   .. py:attribute:: region_name


   .. py:attribute:: verify
      :value: None



   .. py:attribute:: botocore_config
      :value: None



   .. py:attribute:: force_delete_compute


   .. py:method:: serialize()

      Return the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



   .. py:method:: delete_any_nodegroups(client)
      :async:


      Delete all EKS Nodegroups for a provided Amazon EKS Cluster.

      All the EKS Nodegroups are deleted simultaneously. We wait for
      all Nodegroups to be deleted before returning.



   .. py:method:: delete_any_fargate_profiles(client)
      :async:


      Delete all EKS Fargate profiles for a provided Amazon EKS Cluster.

      EKS Fargate profiles must be deleted one at a time, so we must wait
      for one to be deleted before sending the next delete command.



.. py:class:: EksCreateFargateProfileTrigger(cluster_name, fargate_profile_name, waiter_delay, waiter_max_attempts, aws_conn_id, region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Asynchronously wait for the fargate profile to be created.

   :param cluster_name: The name of the EKS cluster
   :param fargate_profile_name: The name of the fargate profile
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: Which AWS region the connection should use.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


.. py:class:: EksDeleteFargateProfileTrigger(cluster_name, fargate_profile_name, waiter_delay, waiter_max_attempts, aws_conn_id, region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Asynchronously wait for the fargate profile to be deleted.

   :param cluster_name: The name of the EKS cluster
   :param fargate_profile_name: The name of the fargate profile
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: Which AWS region the connection should use.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


.. py:class:: EksCreateNodegroupTrigger(cluster_name, nodegroup_name, waiter_delay, waiter_max_attempts, aws_conn_id, region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger for EksCreateNodegroupOperator.

   The trigger will asynchronously poll the boto3 API and wait for the
   nodegroup to be in the state specified by the waiter.

   :param cluster_name: The name of the EKS cluster associated with the node group.
   :param nodegroup_name: The name of the nodegroup to check.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: Which AWS region the connection should use. (templated)
       If this is None or empty then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


.. py:class:: EksDeleteNodegroupTrigger(cluster_name, nodegroup_name, waiter_delay, waiter_max_attempts, aws_conn_id, region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger for EksDeleteNodegroupOperator.

   The trigger will asynchronously poll the boto3 API and wait for the
   nodegroup to be in the state specified by the waiter.

   :param cluster_name: The name of the EKS cluster associated with the node group.
   :param nodegroup_name: The name of the nodegroup to check.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: Which AWS region the connection should use. (templated)
       If this is None or empty then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


